--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,23 @@
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(130, 114, 232);
+    border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(125, 113, 207);
+}
+
 @font-face {
     font-family: 'dotty';
     src: url(dotty/dotty.ttf);
@@ -68,9 +85,7 @@ a {
 }
 
 .container {
-    /* background: black; */
     background-color: rgb(23, 23, 23);
-
     display: flex;
     width: 840px;
     max-height: 400px;
@@ -80,7 +95,7 @@ a {
     justify-content: center;
     gap: 1rem;
     padding: 1.5rem;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .container>div {
